Get rid of multiline {} blocks

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -67,10 +67,10 @@ Congratulations to 5 new contributors listed on decred.org https://github.com/de
 
 {new contractor companies, updates from existing ones}
 
-{interviews
+{interviews}
+
 * https://www.reddit.com/r/decred/comments/9ve9ie/decred_intriguing_and_extraordinary_an_interview/
 * https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4
-}
 
 ## Governance
 
@@ -289,7 +289,7 @@ A paper was [published](https://www.nature.com/articles/s41558-018-0321-8) in Na
 
 Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blossom-and-proposed-feature-goals/31891) hybrid ASIC-GPU mining, among other improvements planned for next year's protocol upgrade.
 
-{governance, forks
+{governance, forks}
 
 Bitcoin Cash, born as a solution to the long-running Bitcoin scaling debate, itself had a contentious hard fork this month. This [article](https://bitcoinmagazine.com/articles/when-fork-forks-what-you-need-know-bitcoin-cash-goes-war/) has a good summary of what the fork was about. The sides came to be referred to by their dominant software implementation, Bitcoin ABC and Bitcoin Satoshi's Vision. BCH ABC was planning a hard fork to add canonical transaction ordering and a new OP code - BCH SV rejects these changes and plans instead to return to a set of rules based on Bitcoin version 0.1.0. 
 
@@ -309,20 +309,17 @@ Aragon [released](https://blog.aragon.org/aragon-06-is-live-on-mainnet/) a new v
 
 The [NavCoin community fund](https://navcoin.org/en/community-fund/) [launched](https://medium.com/@NAVCoin/community-fund-activated-edc72207a0c0) on Nov 16. Navcoin's community fund operates on "Dual-vote consensus", with an initial vote to decide if a proposal is approved or not, and then a subsequent vote to determine whether the payout should be made (after the work is done). Voters are participants in NavCoin staking, and vote with the weight of their stake. The Navcoin community fund receives 0.25 from each block minted, 500k Nav per year, or around $93k at today's prices. NavCoin proposal voting lasts for one week and requires participation of 50% of stakers, with 70% approval required for acceptance.
 
-}
+UK government canceled a stablecoin project based on a fork of btcd. [@alexbosworth noted](https://twitter.com/alexbosworth/status/1056318062176145414): "The thing about stablecoins is that one day someone can come along and cancel the whole thing.".
 
-UK government canceled a stablecoin project based on a fork of btcd. [@alexbosworth] [noted](https://twitter.com/alexbosworth/status/1056318062176145414): "The thing about stablecoins is that one day someone can come along and cancel the whole thing.".
+{DEX}
 
-{DEX
 DEX: IDEX [decided](https://medium.com/aurora-dao/pragmatic-decentralization-how-idex-will-approach-industry-regulations-8b109212128a) to implement IP blocking and KYC, SEC [charged](https://www.sec.gov/news/press-release/2018-258) EtherDelta founder with operating an unregistered exchange.
-}
 
-{related exchanges and websites
+{related exchanges and websites}
 
 Listing on a popular exchange [does not always](https://www.ccn.com/why-did-bat-lose-28-of-its-value-overnight-after-coinbase-listing/) give a good pump.
-}
 
-{other: regulations, security, fun
+{other: regulations, security, fun}
 
 http://unchainedpodcast.co/down-94-since-winter-what-has-happened-to-icos-ep91
 https://twitter.com/laurashin/status/1059791476102754305
@@ -334,8 +331,6 @@ Regular security reminder: SMS, and relying on mobile operators in general, is b
 Verizon, is there a better link? https://twitter.com/realSidhuJag/status/1068573772238663680
 
 Copay wallet was infected with malware to steal cryptocurrency. If you used this wallet or its derivative, you may need to move your coins to a new seed. This [coverage](https://thehackernews.com/2018/11/nodejs-event-stream-module.html) includes details like affected software and versions. The cause was repository compromise of one of the npm dependencies. No known Decred software was affected.
-
-}
 
 ## About This Issue
 
