Move Appcivico to Adoption, add todos

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -111,8 +111,6 @@ Competitor Bitmain announced the Decred [Antminer DR5](https://shop.bitmain.com.
 
 Luxor pool announced a 3-5% hashrate boost for Decred miners on November 26th on [Twitter](https://twitter.com/LuxorTechTeam/status/1067110171057381376) and on Matrix in [#pow-mining](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154325337225556ClvOt:decred.org).
 
-[Appcivico](https://appcivico.com/pt/), a Brazilian company working on political transparency and accountability through blockchain anchoring, [announced the first Presidential candidate](https://t.co/iUu4MSrBuF) to utilize their campaign finance transparency system.  Marina Silva, while failing to become the second female president in Brasil, became the first candidate to utilize the [Voto Legal system](https://votolegal.com.br/) joining ~130 candidates in smaller races who voluntarily stamp all political contribution data onto the Decred blockchain.
-
 New VSPs:
 
 * [decred.staked.us](https://decred.staked.us/) with 5% fee. [Staked](https://staked.us/about/) is a company that provides staking services for [multiple](https://staked.us/yields/) cryptocurrencies and has recently [published](https://medium.com/coinmonks/decred-staking-guide-2e569d0390ff) a guide on how to stake Decred using their VSP.
@@ -152,6 +150,11 @@ New merchants:
 * [Coinstop](https://coinstop.io/), Australian reseller of Trezor, Ledger and KeepKey devices, now [accepts](https://twitter.com/COINSTOPio/status/1067927790320664576) DCR.
 
 {applications of Decred blockchain and related projects: Politeia, atomicswap}
+
+[Appcivico](https://appcivico.com/pt/), a Brazilian company working on political transparency and accountability through blockchain anchoring, [announced the first Presidential candidate](https://criptoeconomia.com.br/o-papel-da-tecnologia-blockchain-na-eleicao-brasileira-de-2018/) to utilize their campaign finance transparency system.  Marina Silva, while failing to become the second female president in Brasil, became the first candidate to utilize the [Voto Legal system](https://votolegal.com.br/) joining ~130 candidates in smaller races who voluntarily stamp all political contribution data onto the Decred blockchain.
+
+* {1. anything new from what was reported in Oct?}
+* {2. the 'announced' link does not mention Appcivico}
 
 {investment adoption}
 
