--- a/journal/201811.md
+++ b/journal/201811.md
@@ -12,7 +12,7 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 {per-project summary, drop items without updates}
 
-[dcrd](https://github.com/decred/dcrd): [Reversed UTXO set semantics](https://github.com/decred/dcrd/pull/1471) was merged, an important change that provides simpler and more efficient handling of unspent outputs. A side effect of this is that full block reorganization tests run 40% faster. An accompanying [database migration](https://github.com/decred/dcrd/pull/1520) is merged and will be added in the next major release.
+[dcrd](https://github.com/decred/dcrd): Two big changes started last month were merged after extensive testing. First one is [reversed UTXO set semantics](https://github.com/decred/dcrd/pull/1471) and its accompanying [database migration](https://github.com/decred/dcrd/pull/1520), an important change that provides simpler and more efficient handling of unspent outputs. A side effect of this is that full block reorganization tests run 40% faster. Second one is [optimized reorganization handling](https://github.com/decred/dcrd/pull/1500). New [--maxsameip](https://github.com/decred/dcrd/pull/1517) argument allows to limit the number of connections with the same IP address. A fix to an ultra rare bug was [ported](https://github.com/decred/dcrd/pull/1533) from upstream btcd.
 
 [dcrwallet](https://github.com/decred/dcrwallet): As usage has increased the number of addresses watched by default has become too limited for some and configuration file modification for dcrwallet was required as a workaround. This [address watching issue](https://github.com/decred/dcrwallet/pull/1320) was fixed by default this month. Additional rare use case fixes included potential [missed or double spent transactions](https://github.com/decred/dcrwallet/pull/1321) and [improvement of locked balance calculations](https://github.com/decred/dcrwallet/pull/1330).
 
