removed note from dcrd, processed design

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -14,9 +14,7 @@ Amidst the excitement, growth and change in the community, Decred development co
 
 [dcrd](https://github.com/decred/dcrd): Two big changes started last month were merged after extensive testing. First one is [reversed UTXO set semantics](https://github.com/decred/dcrd/pull/1471) and its accompanying [database migration](https://github.com/decred/dcrd/pull/1520), an important change that provides simpler and more efficient handling of unspent outputs. A side effect of this is that full block reorganization tests run 40% faster. Second one is [optimized reorganization handling](https://github.com/decred/dcrd/pull/1500). New [--maxsameip](https://github.com/decred/dcrd/pull/1517) argument allows to limit the number of connections with the same IP address. A fix to an ultra rare bug was [ported](https://github.com/decred/dcrd/pull/1533) from upstream btcd.
 
-[dcrwallet](https://github.com/decred/dcrwallet): As usage has increased the number of addresses watched by default has become too limited for some and configuration file modification for dcrwallet was required as a workaround. This [address watching issue](https://github.com/decred/dcrwallet/pull/1320) was fixed by default this month. Additional rare use case fixes included potential [missed or double spent transactions](https://github.com/decred/dcrwallet/pull/1321) and [improvement of locked balance calculations](https://github.com/decred/dcrwallet/pull/1330).
-
-* {not clear from pr 1320 that it has something to do with config defaults or config file}
+[dcrwallet](https://github.com/decred/dcrwallet): As usage has increased the number of addresses watched by default has become too limited for some and configuration file modification for dcrwallet was required as a workaround. This [address watching issue](https://github.com/decred/dcrwallet/pull/1320) was fixed for wallets with address beyond the previously default gap limit this month. Additional rare use case fixes included potential [missed or double spent transactions](https://github.com/decred/dcrwallet/pull/1321) and [improvement of locked balance calculations](https://github.com/decred/dcrwallet/pull/1330).
 
 [Decrediton](https://github.com/decred/decrediton): To ensure continued cross-platform stability and performance Decrediton was [updated to Electron 3](https://github.com/decred/decrediton/pull/1777). Display of the Decred [Treasury balance](https://github.com/decred/decrediton/pull/1764) was added. Startup performance of [large wallets](https://github.com/decred/decrediton/pull/1727) was improved. Automatic ticket buying was switched to [ticketbuyer v2](https://github.com/decred/decrediton/pull/1744). It has fewer options and is simpler to use than v1 thanks to the stabilized ticket prices. Now all the user needs to specify is balance to maintain, account and stakepool to use. Politeia integration saw improvements as well including [more responsive](https://github.com/decred/decrediton/pull/1825) proposal loading and [notifications for new proposals and votes](https://github.com/decred/decrediton/pull/1835). The UI/UX saw some tuneups this month including [overview design improvements](https://github.com/decred/decrediton/issues/1818), updated [account icons](https://github.com/decred/decrediton/issues/1811) and improvements to the [navigation icons and microanimations](https://github.com/decred/decrediton/issues/1809). The features mentioned were merged into the master branch and will be available in the next release of Decrediton.
 
@@ -44,8 +42,7 @@ Several privacy issues were discovered and discussed. A patch is being tested to
 
 Ticket splitting support groups exist both on the [Decred Slack](https://decred.slack.com) and in the [Telegram Group](https://t.me/dcrticketsplit) where [VSP agnostic instructions](https://t.me/dcrticketsplit/2666) are availble.
 
-design:
-* https://medium.com/@firethought/base-iconset18-motion-pack-readme-a96f96e868
+[design](https://github.com/decred/dcrdesign): Kyle at [Firethought](https://firethought.net/) announced a [Decred icon motion pack](https://medium.com/@firethought/base-iconset18-motion-pack-readme-a96f96e868) which promises to bring "more engaging Decred application experiences" and builds on the icon pack designed by [eeter.co](http://www.eeter.co/).
 
 [docs](https://github.com/decred/dcrdocs): November was a huge month for documentation with a variety of community supported changes and updates.  The [VSP change language proposal](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75) passed which confirmed a community desire to change "PoS Mining" to "PoS Voting", and from "stakepool" to "Voting Service Provider (VSP)" in all Decred documentation.  Updates included [changes to general documentation](https://github.com/decred/dcrdocs/pull/590) and to the [stakepool page](https://github.com/decred/dcrdocs/pull/724). Updates were made to [adopt the term "Decred Treasury"](https://github.com/decred/dcrdocs/pull/690) for the special address that holds funds coming from the 10% of the block rewards {better wording possible}. For those looking to take a deeper dive into Politeia a new [Navigating Politeia Data](https://docs.decred.org/advanced/navigating-politeia-data/) advanced document was created. The often requested and long awaited [Decred Glossary](https://github.com/decred/dcrdocs/pull/675) was completed and published this month in part due to a huge effort by @s_ben and many people who supported the work with feedback and suggestions.  We highly recommend utilizing [the glossary](https://docs.decred.org/glossary/) to improve our shared community understanding.
 
