processed/added to interviews

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -68,8 +68,9 @@ Congratulations to 5 new contributors listed on decred.org https://github.com/de
 
 {interviews}
 
-* https://www.reddit.com/r/decred/comments/9ve9ie/decred_intriguing_and_extraordinary_an_interview/
-* https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4
+Crypto enthusiast [Arikozel](https://medium.com/@artikozel) interviewed the operator of long established [coinmine.pl](https://www2.coinmine.pl/) Feeleep for a [deep dive into Decred infrastructure](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4).  Marco Peereboom of the Decred Project gave an [extended interview with Paul Snow](https://www.youtube.com/watch?v=qCQB-h3Vx90) after the Texas Bitcoin Conference discussing the behind the scenes history of Decred and other open source projects.  Crypto with Chingas [interviewed Joshua Buirski of the Decred Project](https://www.youtube.com/watch?v=o5jSLGiAdb8) about the importance of dispute resolution in a decentralized project.  In early November the [video playlist from TBC 2018](https://www.youtube.com/playlist?list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_) was released with talks from [Jonathan Chappelow](https://www.youtube.com/watch?v=axTl2J94IrI&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=20&t=0s), [Denys Zayets](https://www.youtube.com/watch?v=8K7A_j5_VIU&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=23&t=0s), [PlaceHolderVC](https://www.youtube.com/watch?v=tkllaH0Y0ng&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=27&t=0s), [Joshua Buirski](https://www.youtube.com/watch?v=RPeN66ZkAps&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=48&t=0s) and more so if you missed the conference you have a second chance to reap the insights.
+
+
 
 ## Governance
 
