fixed a few double spaces and formatting

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -44,7 +44,7 @@ Ticket splitting support groups exist both on the [Decred Slack](https://decred.
 
 [design](https://github.com/decred/dcrdesign): Kyle at [Firethought](https://firethought.net/) announced a [Decred icon motion pack](https://medium.com/@firethought/base-iconset18-motion-pack-readme-a96f96e868) which promises to bring "more engaging Decred application experiences" and builds on the icon pack designed by [eeter.co](http://www.eeter.co/).
 
-[docs](https://github.com/decred/dcrdocs): November was a huge month for documentation with a variety of community supported changes and updates.  The [VSP change language proposal](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75) passed which confirmed a community desire to change "PoS Mining" to "PoS Voting", and from "stakepool" to "Voting Service Provider (VSP)" in all Decred documentation.  Updates included [changes to general documentation](https://github.com/decred/dcrdocs/pull/590) and to the [stakepool page](https://github.com/decred/dcrdocs/pull/724). Updates were made to [adopt the term "Decred Treasury"](https://github.com/decred/dcrdocs/pull/690) for the special address that holds funds coming from the 10% of the block rewards {better wording possible}. For those looking to take a deeper dive into Politeia a new [Navigating Politeia Data](https://docs.decred.org/advanced/navigating-politeia-data/) advanced document was created. The often requested and long awaited [Decred Glossary](https://github.com/decred/dcrdocs/pull/675) was completed and published this month in part due to a huge effort by @s_ben and many people who supported the work with feedback and suggestions.  We highly recommend utilizing [the glossary](https://docs.decred.org/glossary/) to improve our shared community understanding.
+[docs](https://github.com/decred/dcrdocs): November was a huge month for documentation with a variety of community supported changes and updates.  The [VSP change language proposal](https://proposals.decred.org/proposals/522652954ea7998f3fca95b9c4ca8907820eb785877dcf7fba92307131818c75) passed which confirmed a community desire to change "PoS Mining" to "PoS Voting", and from "stakepool" to "Voting Service Provider (VSP)" in all Decred documentation.  Updates included [changes to general documentation](https://github.com/decred/dcrdocs/pull/590) and to the [stakepool page](https://github.com/decred/dcrdocs/pull/724). Updates were made to [adopt the term "Decred Treasury"](https://github.com/decred/dcrdocs/pull/690) for the special address that holds funds coming from the 10% of the block rewards {better wording possible}. For those looking to take a deeper dive into Politeia a new [Navigating Politeia Data](https://docs.decred.org/advanced/navigating-politeia-data/) advanced document was created. The often requested and long awaited [Decred Glossary](https://github.com/decred/dcrdocs/pull/675) was completed and published this month in part due to a huge effort by @s_ben and many people who supported the work with feedback and suggestions. We highly recommend utilizing [the glossary](https://docs.decred.org/glossary/) to improve our shared community understanding.
 
 [decred.org](https://github.com/decred/dcrweb):
 
@@ -68,7 +68,7 @@ Congratulations to 5 new contributors listed on decred.org https://github.com/de
 
 {interviews}
 
-Crypto enthusiast [Arikozel](https://medium.com/@artikozel) interviewed the operator of long established [coinmine.pl](https://www2.coinmine.pl/) Feeleep for a [deep dive into Decred infrastructure](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4).  Marco Peereboom of the Decred Project gave an [extended interview with Paul Snow](https://www.youtube.com/watch?v=qCQB-h3Vx90) after the Texas Bitcoin Conference discussing the behind the scenes history of Decred and other open source projects.  Crypto with Chingas [interviewed Joshua Buirski of the Decred Project](https://www.youtube.com/watch?v=o5jSLGiAdb8) about the importance of dispute resolution in a decentralized project.  In early November the [video playlist from TBC 2018](https://www.youtube.com/playlist?list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_) was released with talks from [Jonathan Chappelow](https://www.youtube.com/watch?v=axTl2J94IrI&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=20&t=0s), [Denys Zayets](https://www.youtube.com/watch?v=8K7A_j5_VIU&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=23&t=0s), [PlaceHolderVC](https://www.youtube.com/watch?v=tkllaH0Y0ng&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=27&t=0s), [Joshua Buirski](https://www.youtube.com/watch?v=RPeN66ZkAps&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=48&t=0s) and more so if you missed the conference you have a second chance to reap the insights.
+Crypto enthusiast [Arikozel](https://medium.com/@artikozel) interviewed the operator of long established [coinmine.pl](https://www2.coinmine.pl/) Feeleep for a [deep dive into Decred infrastructure](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4). Marco Peereboom of the Decred Project gave an [extended interview with Paul Snow](https://www.youtube.com/watch?v=qCQB-h3Vx90) after the Texas Bitcoin Conference discussing the behind the scenes history of Decred and other open source projects.  Crypto with Chingas [interviewed Joshua Buirski of the Decred Project](https://www.youtube.com/watch?v=o5jSLGiAdb8) about the importance of dispute resolution in a decentralized project. In early November the [video playlist from TBC 2018](https://www.youtube.com/playlist?list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_) was released with talks from [Jonathan Chappelow](https://www.youtube.com/watch?v=axTl2J94IrI&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=20&t=0s), [Denys Zayets](https://www.youtube.com/watch?v=8K7A_j5_VIU&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=23&t=0s), [PlaceHolderVC](https://www.youtube.com/watch?v=tkllaH0Y0ng&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=27&t=0s), [Joshua Buirski](https://www.youtube.com/watch?v=RPeN66ZkAps&list=PLlLSsIJ2O_cTIaALNXExlEqu3jP6IQyc_&index=48&t=0s) and more. If you missed the conference you have a second chance to reap the insights.
 
 
 
