removed appcivico/votolegal from intregrations

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -140,7 +140,7 @@ Exchange integrations:
 ## Adoption
 
 New merchants:
-UK holiday shoppers have another option to spend Decred this season.  [Flubit annouced Decred will be accepted](https://blog.flubit.com/crypto-coins-drive-xmas-strategy-largest-eshop-200bn-cryptocurrency-industry-goes-mainstream-online-shopping-flubit-com/) along with other cryptocurrencies.
+UK holiday shoppers have another option to spend Decred this season.  Flubit annouced [Decred will be accepted](https://blog.flubit.com/crypto-coins-drive-xmas-strategy-largest-eshop-200bn-cryptocurrency-industry-goes-mainstream-online-shopping-flubit-com/) along with other cryptocurrencies.
 {* Flubit
   * https://flubit.com/
   * https://twitter.com/monetaryunit/status/1062127668769050626
@@ -150,11 +150,6 @@ UK holiday shoppers have another option to spend Decred this season.  [Flubit an
 * [Coinstop](https://coinstop.io/), Australian reseller of Trezor, Ledger and KeepKey devices, now [accepts](https://twitter.com/COINSTOPio/status/1067927790320664576) DCR.
 
 {applications of Decred blockchain and related projects: Politeia, atomicswap}
-
-[Appcivico](https://appcivico.com/pt/), a Brazilian company working on political transparency and accountability through blockchain anchoring, [announced the first Presidential candidate](https://criptoeconomia.com.br/o-papel-da-tecnologia-blockchain-na-eleicao-brasileira-de-2018/) to utilize their campaign finance transparency system.  Marina Silva, while failing to become the second female president in Brasil, became the first candidate to utilize the [Voto Legal system](https://votolegal.com.br/) joining ~130 candidates in smaller races who voluntarily stamp all political contribution data onto the Decred blockchain.
-
-* {1. anything new from what was reported in Oct?}
-* {2. the 'announced' link does not mention Appcivico}
 
 {investment adoption}
 
