--- a/journal/201811.md
+++ b/journal/201811.md
@@ -202,6 +202,9 @@ Articles:
 * {1103} https://coiniq.com/decred-review/
 * {1112} https://medium.com/@info_5576/staking-coins-part-3-decred-83d73f29038d
 * {1122} https://captainaltcoin.com/smaller-pow-coins-are-in-constant-danger-of-51-attacks-decred-dcr-governance-model-is-the-solution/
+* {1122} [DCR balances equity distribution through a hybrid consensus mechanism](https://michelangelo.sncrating.com/report/168)(CN) by sncrating.com
+* {1124} [Rating article review - DCR balances equity distribution through a hybrid consensus mechanism](https://medium.com/@guang.dcr/%E8%A7%A3%E6%9E%90%E8%AF%84%E7%BA%A7-dcr-%E9%80%9A%E8%BF%87%E6%B7%B7%E5%90%88%E5%85%B1%E8%AF%86%E6%9C%BA%E5%88%B6%E5%B9%B3%E8%A1%A1%E6%9D%83%E7%9B%8A%E5%88%86%E9%85%8D-%E6%A0%87%E5%87%86%E5%85%B1%E8%AF%86%E8%AF%84%E7%BA%A7-5edc6f03dc1c)(CN) by @guang
+* {1124} [Decred Split Ticket](https://medium.com/@guang.dcr/%E6%89%AB%E7%9B%B2-decred%E5%88%86%E7%A5%A8-ffe3eb2de64d)(CN) by @guang
 
 There were more articles on various websites, but we only list a selected few. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
 
