started processing governance

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -74,6 +74,8 @@ Crypto enthusiast [Arikozel](https://medium.com/@artikozel) interviewed the oper
 
 ## Governance
 
+Decentralized control of the Decrced Treasury through [Politeia](https://proposals.decred.org) was active in November.  As previously reported funding for [Ditto PR Services](https://proposals.decred.org/proposals/27f87171d98b7923a1bd2bee6affed929fa2d2a6e178b5c80a9971a92a5c7f50) and [Open Source Research](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) were accepted early in November.  Mid-November the Decred community disussed decentralieed contractor management and voted to adopt a [DCC or Decred Contractor Clearance](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4) process which aims formalize best practice employed by a variety of open source projects while [rejecting a premium listing](https://proposals.decred.org/proposals/34707d34b09c3ebcf0d4aa604e8a08244e8f0f082c0af3f33d85778c93c81434) on exchange EasyRabbit.
+
 {recap of decision-making activity, including new proposals, changes to proposals, voting, discussions, pre-proposal drafts, etc}
 
 Part of November was reported in the previous issue due to late release.
