Added Linkedin follower counts

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -234,7 +234,7 @@ Community stats:
 * Slack users {} (+{})
 * YouTube subscribers {} (+{})
 * Facebook {} (+{}) followers and {} (+{}) likes
-* LinkedIn followers: {} (+{})
+* LinkedIn followers: Decred Page {433} (+{27}), Politeia page {20} (+{8}) 
 * GitHub {} (+{}) stars and {} (+{}) forks of dcrd repository
 
 Comm systems news:
