--- a/journal/201811.md
+++ b/journal/201811.md
@@ -121,8 +121,13 @@ Nodes: as of Dec 01 there are 204 public listening nodes and 332 normal nodes pe
 
 ## Mining
 
-The Whatsminer D1 [turned out](https://twitter.com/Pangolinminer/status/1061521332498624512) to be 48 TH/s, 9% up from expected 44 TH/s. The price is $4,850 [from Pangolin](https://pangolinminer.com/product/whatsminer-dcr-with-psu-shipout-on-dec-5/). The shipment delay and changes to price and performance drew [varied opinions](https://bitcointalk.org/index.php?topic=5068845.msg47865706#msg47865706) from the community about best practices and [confusion](https://www.reddit.com/r/decred/comments/9fdz9d/psa_do_not_purchase_the_whatsminer_44th_decred/) about the distribution network and what constitutes an official reseller.
-Competitor Bitmain announced the Decred [Antminer DR5](https://shop.bitmain.com.cn/product/detail?pid=0002018111918225889369SR3N9s0646) with 34 TH/s at 1800 W, price CNY 19,000 (USD 2750), shipping late December.  European importers [listing the DR5](https://www.antminerdistribution.com/antminer-dr5/) are listing tentative availability the week of December 21st and prices ranging from [US$3299](https://french.alibaba.com/product-detail/asic-miner-bitmain-antminer-dr5-34th-blake256r14-dcr-digging-machine-decred-mining-machine-ant-miner-with-psu-60820041330.html) to [EUR3291(US$3724)](https://miningwholesale.eu/product/bitmain-antminer-dr5-34th/).
+Obelisk [began producing](https://us16.campaign-archive.com/?u=393b2698d17bdfe48ac0422ac&id=28096412c5) Batch 2-5 units and expects to begin shipping in early December, after that it will take ~4 weeks to fulfill all orders. On Dec 4 they announced several new offers: SC1 hashing boards can be purchased and installed into DCR1 units, DCR1 can be converted to Batch 6 SC1 or sold back to Obelisk. The details are in the newsletter [post](https://us16.campaign-archive.com/?u=393b2698d17bdfe48ac0422ac&id=88576cef2a).
+
+The Whatsminer D1 [turned out](https://twitter.com/Pangolinminer/status/1061521332498624512) to be 48 TH/s, 9% up from expected 44 TH/s. The price was bumped by USD 350 to 4,850 [from Pangolin](https://pangolinminer.com/product/whatsminer-dcr-with-psu-shipout-on-dec-5/). The shipment delay from late Nov to late Dec, and changes to price and performance drew [varied opinions](https://bitcointalk.org/index.php?topic=5068845.msg47865706#msg47865706) from the community about best practices.
+
+{looking at the bitcointalk thread it is still confusing: is it 44 or 48 TH/s?}
+
+Bitmain announced the Decred [Antminer DR5](https://shop.bitmain.com.cn/product/detail?pid=0002018111918225889369SR3N9s0646) with 34 TH/s at 1800 W, price CNY 19,000 (USD 2,750) and shipping late December. European [importers of the DR5](https://www.antminerdistribution.com/antminer-dr5/) are listing tentative availability the week of December 21st and prices ranging from [USD 3,299](https://french.alibaba.com/product-detail/asic-miner-bitmain-antminer-dr5-34th-blake256r14-dcr-digging-machine-decred-mining-machine-ant-miner-with-psu-60820041330.html) to [EUR 3,291](https://miningwholesale.eu/product/bitmain-antminer-dr5-34th/) (USD 3,724).
 
 ## Integrations
 
