--- a/journal/201811.md
+++ b/journal/201811.md
@@ -127,37 +127,22 @@ The Whatsminer D1 [turned out](https://twitter.com/Pangolinminer/status/10615213
 
 {looking at the bitcointalk thread it is still confusing: is it 44 or 48 TH/s?}
 
-Bitmain announced the Decred [Antminer DR5](https://shop.bitmain.com.cn/product/detail?pid=0002018111918225889369SR3N9s0646) with 34 TH/s at 1800 W, price CNY 19,000 (USD 2,750) and shipping late December. European [importers of the DR5](https://www.antminerdistribution.com/antminer-dr5/) are listing tentative availability the week of December 21st and prices ranging from [USD 3,299](https://french.alibaba.com/product-detail/asic-miner-bitmain-antminer-dr5-34th-blake256r14-dcr-digging-machine-decred-mining-machine-ant-miner-with-psu-60820041330.html) to [EUR 3,291](https://miningwholesale.eu/product/bitmain-antminer-dr5-34th/) (USD 3,724).
+Bitmain announced the Decred [Antminer DR5](https://shop.bitmain.com.cn/product/detail?pid=0002018111918225889369SR3N9s0646) with 34 TH/s at 1800 W, price CNY 19,000 (USD 2,750) and shipping late December. European [importers of the DR5](https://www.antminerdistribution.com/antminer-dr5/) are listing tentative availability the week of Dec 21 and prices ranging from [USD 3,299](https://french.alibaba.com/product-detail/asic-miner-bitmain-antminer-dr5-34th-blake256r14-dcr-digging-machine-decred-mining-machine-ant-miner-with-psu-60820041330.html) to [EUR 3,291](https://miningwholesale.eu/product/bitmain-antminer-dr5-34th/) (USD 3,724).
 
 ## Integrations
 
-Luxor pool announced a 3-5% hashrate boost for Decred miners on November 26th on [Twitter](https://twitter.com/LuxorTechTeam/status/1067110171057381376) and on Matrix in [#pow-mining](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154325337225556ClvOt:decred.org).
+Luxor pool [announced](https://twitter.com/LuxorTechTeam/status/1067110171057381376) a 3-5% hashrate boost for Decred miners.
 
 New VSPs:
 
 * [decred.staked.us](https://decred.staked.us/) with 5% fee. [Staked](https://staked.us/about/) is a company that provides staking services for [multiple](https://staked.us/yields/) cryptocurrencies and has recently [published](https://medium.com/coinmonks/decred-staking-guide-2e569d0390ff) a guide on how to stake Decred using their VSP.
 * [dcrpool.dittrex.com](https://dcrpool.dittrex.com) with 1% fee.
 
-{new items of infrastructure or news from existing ones}
-
 Exchange integrations:
 
-* Bitqist
-  * https://www.reddit.com/r/decred/comments/9y5dru/you_can_now_instantly_exchange_decred_on_bitqist/
-  * https://bitqist.com/exchange/decred
-  * Dutch https://support.bitqist.com/hc/en-us/articles/360003566512-About-Us
-  * cannot deposit DCR but can withdraw https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$154342154026995puxog:decred.org
-* Kaiserex officially launched an OTC desk after being involved in OTC trading since 2015
-  * https://twitter.com/kaiserexcom/status/1064494181224206336
-  * https://www.kaiserex.com/kaiserex-otc-desk/
-  * min. trade size 50k EUR
-* DragonEx added the DCR/BTC trading pair https://twitter.com/Dragonex_io/status/1062613644276428800
-
-{OTC desks}
-
-{payment processors}
-
-{wallets}
+* [Bitqist](https://bitqist.com/) announced Decred integration [on r/decred](https://www.reddit.com/r/decred/comments/9y5dru/you_can_now_instantly_exchange_decred_on_bitqist/). The exchange [is based](https://support.bitqist.com/hc/en-us/articles/360003566512-About-Us) in the Netherlands. @Haon [reported](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$154342154026995puxog:decred.org) that withdrawals work but deposits are not possible.
+* [Kaiserex](https://www.kaiserex.com/) officially [launched](https://twitter.com/kaiserexcom/status/1064494181224206336) an [OTC desk](https://www.kaiserex.com/kaiserex-otc-desk/) after being involved in OTC trading since 2015. DCR is one of the supported cryptocurrencies, on the fiat side are USD, EUR, GPB and JPY. Min. trade size is EUR 50,000 and the fees are 0.05-1%
+* DragonEx [added](https://twitter.com/Dragonex_io/status/1062613644276428800) the DCR/BTC trading pair.
 
 ## Adoption
 
