--- a/journal/201811.md
+++ b/journal/201811.md
@@ -160,9 +160,11 @@ Per @Dustorf's blog, the preliminary focus will be on gaining community alignmen
 
 December will be a month of planning, and @jy-p will present "Applications of Blockchain Time-Stamping" at The North American Bitcoin Conference in Miami, USA on Jan 16-18. Other events will likely be confirmed the first week of December and will be made public in #marketing.
 
-https://www.reddit.com/r/decred/comments/a1bsv8/what_to_expect_from_the_ditto_partnership/
+Besides planning mid and long term strategy our PR will also act on current opportunities, as explained [in #marketing](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154385900031974cIHsk:decred.org). 
 
-Targeted advertising report for {month} was posted by @{}. {short recap}. Read more [here]({link}).
+@Haon started a [discussion](https://www.reddit.com/r/decred/comments/a1bsv8/what_to_expect_from_the_ditto_partnership/) on Reddit about what to expect from the Ditto partnership and shared thoughts based on his experience with the Decred community and collaboration with the previous PR firm (PRWithBrains).
+
+Targeted advertising report for November was posted by @{}. {short recap}. Read more [here]({link}).
 
 ## Events
 
