--- a/journal/201811.md
+++ b/journal/201811.md
@@ -69,35 +69,35 @@ As previously reported funding for [Ditto PR services](https://proposals.decred.
 
 New proposals are listed below.
 
-1\. [Upgrade mining algorithm to ProgPoW](https://proposals.decred.org/proposals/0aaab331075d08cb03333d5a1bef04b99a708dcbfebc8f8c94040ceb1676e684) submitted by engineerking on Nov 12
+[Upgrade mining algorithm to ProgPoW](https://proposals.decred.org/proposals/0aaab331075d08cb03333d5a1bef04b99a708dcbfebc8f8c94040ceb1676e684) submitted by engineerking on Nov 11
 
-The author asked that the mining algorithm of Decred be changed to "ProgPoW".
-
-Status: Author has not yet authorized the start of voting.
-
-2\. [Decred Open Source Research proposal 2 - research projects](https://proposals.decred.org/proposals/5d9cfb07aefb338ba1b74f97de16ee651beabc851c7f2b5f790bd88aea23b3cb) submitted by @richardred on Nov 26
-
-A follow-up to a previous [proposal](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) that aims to collect ideas for research projects and determine the most needed ones  which has been approved.
+The author proposes to change Decred's mining algorithm to [ProgPoW](https://github.com/ifdefelse/ProgPOW).
 
 Status: Author has not yet authorized the start of voting.
 
-3\. [Decred Radio Advertising, 190+ FM and AM Stations, + Intl. Satellite](https://proposals.decred.org/proposals/7fe5d07a4ffff7dc6a83383018823d880b1c1db0a29305e74934817cf2b4e2ce) submitted by ftl_ian on Nov 26
+[Decred Open Source Research proposal 2 - research projects](https://proposals.decred.org/proposals/5d9cfb07aefb338ba1b74f97de16ee651beabc851c7f2b5f790bd88aea23b3cb) submitted by @richardred on Nov 21
 
-This is a proposal to get Decred advertised on a radio show called "Free Talk Live". Total cost is $22,750 for 13 weeks.
+A follow-up to the first [research proposal](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) that aims to collect ideas for research projects and determine the most needed ones  which has been approved.
 
-Status: Waiting for administrator approval to start voting.
+Status: Author has not yet authorized the start of voting.
 
-4\. [Decredex](https://proposals.decred.org/proposals/e78bc28631d0e682912e3ece25944481bf978b906ea44b1ed36470c0f48b27fc) submitted by fabianreum on Nov 26
-
-This proposal requests funding to work on a Decentrilized Exchange by a company called REUM Ltd. It has a maximum total budged of $1,086,500.
-
-Status: Waiting for administrator approval to start voting.
-
-5\. [Decred integration into Crypto-ATMs](https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) by bcashgr on Nov 24
+[Decred integration into Crypto-ATMs](https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) by bcashgr on Nov 24
 
 This proposal is from a company called Bcash it aims to seek funding to integerate Decred into their ATMs. Development cost of EUR 25,000 and 1,650 EUR/month for support.
 
-Status: Waiting for administrator approval to start voting.
+Status: Voting is active since Dec 4.
+
+[Decred Radio Advertising, 190+ FM and AM Stations, + Intl. Satellite](https://proposals.decred.org/proposals/7fe5d07a4ffff7dc6a83383018823d880b1c1db0a29305e74934817cf2b4e2ce) submitted by ftl_ian on Nov 26
+
+This is a proposal to get Decred advertised on a radio show called "Free Talk Live". Total cost is $22,750 for 13 weeks.
+
+Status: Voting is active since Dec 4.
+
+[Decredex](https://proposals.decred.org/proposals/e78bc28631d0e682912e3ece25944481bf978b906ea44b1ed36470c0f48b27fc) submitted by fabianreum on Nov 26
+
+This proposal requests funding to work on a decentrilized exchange by a company called REUM Ltd. It has a maximum total budged of $1,086,500.
+
+Status: Voting is active since Dec 4.
 
 Multiple people started hacking on Politeia data in #proposals and #research. @snr01 shared [charts of voting data](https://github.com/snr01/PiVotingCharts).
 
@@ -105,7 +105,7 @@ Low quality proposals cluttering Politeia were discussed in depth and multiple i
 
 The #proposals room is very active and hosts alot of insightful discussions about Politeia and upcoming proposals. Join on [Matrix](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org) or on [Slack](https://decred.slack.com/messages/CDL5DRZU6).
 
-The weekly Politeia Digest by @richardred covers all important activity around Politeia in greater detail, read [issue 4](https://www.reddit.com/r/decred/comments/9x3e8a/politeia_digest_issue_4_nov_7nov_13_2018/), [issue 5](https://www.reddit.com/r/decred/comments/9z84we/politeia_digest_issue_5_nov_14nov_20_2018/) and [issue 6](https://www.reddit.com/r/decred/comments/a16iyu/politeia_digest_issue_6_nov_21nov_27_2018/) released this month.
+The weekly Politeia Digest by @richardred covers all important activity around Politeia in greater detail, check [issue 4](https://medium.com/politeia-digest/politeia-digest-issue-4-nov-7-nov-13-2018-685e18e7491a), [issue 5](https://medium.com/politeia-digest/issue-5-nov-14-nov-20-2018-62e8aed223b7) and [issue 6](https://medium.com/politeia-digest/issue-6-nov-21-nov-27-2018-3260d03d26a1) released this month. Reddit discussions can be found with [this search query](https://www.reddit.com/r/decred/search?include_over_18=on&restrict_sr=on&q=politeia%20digest).
 
 ## Network
 
