--- a/journal/201811.md
+++ b/journal/201811.md
@@ -146,6 +146,8 @@ The Whatsminer D1 [turned out](https://twitter.com/Pangolinminer/status/10615213
 
 Bitmain announced the Decred [Antminer DR5](https://shop.bitmain.com.cn/product/detail?pid=0002018111918225889369SR3N9s0646) with 34 TH/s at 1800 W, price CNY 19,000 (USD 2,750) and shipping late December. European [importers of the DR5](https://www.antminerdistribution.com/antminer-dr5/) are listing tentative availability the week of Dec 21 and prices ranging from [USD 3,299](https://french.alibaba.com/product-detail/asic-miner-bitmain-antminer-dr5-34th-blake256r14-dcr-digging-machine-decred-mining-machine-ant-miner-with-psu-60820041330.html) to [EUR 3,291](https://miningwholesale.eu/product/bitmain-antminer-dr5-34th/) (USD 3,724).
 
+Video review of Obelisk DCR1 was published on [youtube](https://www.youtube.com/watch?v=U0QjhvaoQpc).
+
 ## Integrations
 
 Luxor pool [announced](https://twitter.com/LuxorTechTeam/status/1067110171057381376) a 3-5% hashrate boost for Decred miners.
@@ -242,7 +244,7 @@ Videos:
 * {1105} https://www.youtube.com/watch?v=MgtBRlAfu2k {duplicate of marco's interview?}
 * {1106} Decred im Coincheck - Zahlen, Daten und Fakten ([youtube](https://www.youtube.com/watch?v=mHpqDpSd0Fs))
 * {1109} Politeia, como funciona Os desenvolvedores Fernando e Tiago Alves explicam ([youtube](https://www.youtube.com/watch?v=usWrs9B2Rm4), featuring @Tiago Alves and @fernandoabolafio)
-* {1130} Obelisk DCR1 Review ([youtube](https://www.youtube.com/watch?v=U0QjhvaoQpc))
+
 
 Audio:
 
