--- a/journal/201811.md
+++ b/journal/201811.md
@@ -62,13 +62,11 @@ Congratulations to 5 new contributors [listed](https://github.com/decred/dcrweb/
 
 @kozel interviewed the operator of a long established [coinmine.pl](https://www2.coinmine.pl/) Feeleep for a [deep dive into Decred infrastructure](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4).
 
-
-
 ## Governance
 
 As previously reported funding for [Ditto PR services](https://proposals.decred.org/proposals/27f87171d98b7923a1bd2bee6affed929fa2d2a6e178b5c80a9971a92a5c7f50) and [Open Source Research](https://proposals.decred.org/proposals/c68bb790ba0843980bb9695de4628995e75e0d1f36c992951db49eca7b3b4bcd) was approved early in November. Mid-November the Decred community discussed contractor management and voted to adopt a [Decred Contractor Clearance](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4) process which aims formalize best practices employed by open source projects. [Premium listing](https://proposals.decred.org/proposals/34707d34b09c3ebcf0d4aa604e8a08244e8f0f082c0af3f33d85778c93c81434) on Easyrabbit exchange was rejected.
 
-New proposals are listed below.
+New proposals as of Dec 4 are listed below.
 
 **[Upgrade mining algorithm to ProgPoW](https://proposals.decred.org/proposals/0aaab331075d08cb03333d5a1bef04b99a708dcbfebc8f8c94040ceb1676e684) submitted by engineerking on Nov 11**
 
@@ -100,28 +98,23 @@ This proposal requests funding to work on a decentralized exchange by a company 
 
 Status: Voting is active since Dec 4.
 
-**[Add Decred support to Coffee Wallet](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) submitted by francio on Nov 29.**
+**[Add Decred support to Coffee Wallet](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) submitted by francio on Nov 29**
 
-The proposal aims to get funds to work on adding Decred support to "Coffee Wallet". This would cost 150 DCR and claim it will be ready by early January.  
+The proposal aims to get funds to work on adding Decred support to "Coffee Wallet". This would cost 150 DCR and is projected to be ready by early January.
 
-Status: Author has not yet authorized the start of voting
+Status: Author has not yet authorized the start of voting.
 
-**[Stable coin - USDD](https://proposals.decred.org/proposals/85fc65cef080cfc3564906fd3d488b827d74fc99bb29143ed8aa6c400b765be9) submitted by fabianreum on on Nov 29.**
+**[Stable coin - USDD](https://proposals.decred.org/proposals/85fc65cef080cfc3564906fd3d488b827d74fc99bb29143ed8aa6c400b765be9) submitted by fabianreum on on Nov 29**
 
-This proposal requests funding to work on a Stable Coin(USDD) backed by Decred it involves partnerships between multiple companies. They have budgeted $1,576,000 for 4 years a full breakdown is provided in the proposal.
+This proposal requests funding to work on a stablecoin (USDD) backed by Decred. It involves partnerships between multiple companies. They have budgeted $1,576,000 for 4 years, a full breakdown is provided in the proposal.
 
-Status: Author has not yet authorized the start of voting
+Status: Author has not yet authorized the start of voting.
 
-**[Decred Bug Bounty Proposal](https://proposals.decred.org/proposals/d33a2667469b56942adf42453def6cc2292325251e4cf791e806939ea9efc9e1) submitted by @degeri on 30 Nov.**
+**[Decred Bug Bounty Proposal](https://proposals.decred.org/proposals/d33a2667469b56942adf42453def6cc2292325251e4cf791e806939ea9efc9e1) submitted by @degeri on 30 Nov**
 
 {PLEASE FILL THIS}
 
-Status: Author has not yet authorized the start of voting
-
-
-
-Status: Author has not yet authorized the start of voting
-
+Status: Author has not yet authorized the start of voting.
 
 Multiple people started hacking on Politeia data in #proposals and #research. @snr01 shared [charts of voting data](https://github.com/snr01/PiVotingCharts).
 
@@ -130,6 +123,7 @@ Low quality proposals cluttering Politeia were discussed in depth and multiple i
 The #proposals room is very active and hosts alot of insightful discussions about Politeia and upcoming proposals. Join on [Matrix](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org) or on [Slack](https://decred.slack.com/messages/CDL5DRZU6).
 
 The weekly Politeia Digest by @richardred covers all important activity around Politeia in greater detail, check [issue 4](https://medium.com/politeia-digest/politeia-digest-issue-4-nov-7-nov-13-2018-685e18e7491a), [issue 5](https://medium.com/politeia-digest/issue-5-nov-14-nov-20-2018-62e8aed223b7) and [issue 6](https://medium.com/politeia-digest/issue-6-nov-21-nov-27-2018-3260d03d26a1) released this month. Reddit discussions can be found with [this search query](https://www.reddit.com/r/decred/search?include_over_18=on&restrict_sr=on&q=politeia%20digest).
+
 ## Network
 
 Hashrate: November's hashrate opened at around 156 PH/s and closed around 159 PH/s, reaching the low of 125 PH/s and high of 234 PH/s in between. BeePool's share varied between 19-30%, F2Pool 15-46%, Luxor 1.6-4%, and Coinmine 1.9-4%. Unknown hashrate stayed between 25-50% with lows of 15% and spikes to 75%. Pool distribution numbers are approximate and cannot be accurately determined.
