People: new contribs deployed, add titles

--- a/journal/201811.md
+++ b/journal/201811.md
@@ -58,7 +58,7 @@ A warm welcome to new people contributing for the first time: [logicminds](https
 
 Around summer [@30000fps](https://twitter.com/30000fps) began contributing to motion design and graphics. {improve}
 
-Congratulations to 5 new contributors [listed](https://github.com/decred/dcrweb/pull/444) on decred.org: Insaf Nori (@butterfly), Guang (@guang), Seth Benton (@s_ben), Youssef Boukenken (@sef), Zubair Zia (@zubairzia0). {wait for deployment}
+Congratulations to 5 new contributors [listed](https://github.com/decred/dcrweb/pull/444) on decred.org: Insaf Nori (community manager - Middle East, @butterfly), Guang (community manager - Asia, @guang), Seth Benton (developer, @s_ben), Youssef Boukenken (developer, @sef), Zubair Zia (research and strategy, @zubairzia0).
 
 @kozel interviewed the operator of a long established [coinmine.pl](https://www2.coinmine.pl/) Feeleep for a [deep dive into Decred infrastructure](https://medium.com/decred/decred-intriguing-and-extraordinary-an-interview-with-coinmine-pl-mining-pool-operator-5c5592443cb4).
 
